# src/openzaak/components/zaken/openapi.yaml
@@ -1921,6 +1921,11 @@ paths:
           type: string
           enum:
           - zaaktype
+          - hoofdzaak
+          - deelzaken
+          - eigenschappen
+          - status
+          - resultaat
           - zaaktype.catalogus
           - '*'
       - name: ordering
@@ -1998,6 +2003,26 @@ paths:
                     type: object
                     properties:
                       catalogi:zaaktype:
+                        type: array
+                        items:
+                          type: object
+                          properties: {}
+                      zaken:zaak:
+                        type: array
+                        items:
+                          type: object
+                          properties: {}
+                      zaken:zaakeigenschap:
+                        type: array
+                        items:
+                          type: object
+                          properties: {}
+                      zaken:status:
+                        type: array
+                        items:
+                          type: object
+                          properties: {}
+                      zaken:resultaat:
                         type: array
                         items:
                           type: object
@@ -2110,6 +2135,26 @@ paths:
                     type: object
                     properties:
                       catalogi:zaaktype:
+                        type: array
+                        items:
+                          type: object
+                          properties: {}
+                      zaken:zaak:
+                        type: array
+                        items:
+                          type: object
+                          properties: {}
+                      zaken:zaakeigenschap:
+                        type: array
+                        items:
+                          type: object
+                          properties: {}
+                      zaken:status:
+                        type: array
+                        items:
+                          type: object
+                          properties: {}
+                      zaken:resultaat:
                         type: array
                         items:
                           type: object
@@ -2232,6 +2277,26 @@ paths:
                         items:
                           type: object
                           properties: {}
+                      zaken:zaak:
+                        type: array
+                        items:
+                          type: object
+                          properties: {}
+                      zaken:zaakeigenschap:
+                        type: array
+                        items:
+                          type: object
+                          properties: {}
+                      zaken:status:
+                        type: array
+                        items:
+                          type: object
+                          properties: {}
+                      zaken:resultaat:
+                        type: array
+                        items:
+                          type: object
+                          properties: {}
                       catalogi:catalogus:
                         type: array
                         items:
@@ -2320,6 +2385,26 @@ paths:
                     type: object
                     properties:
                       catalogi:zaaktype:
+                        type: array
+                        items:
+                          type: object
+                          properties: {}
+                      zaken:zaak:
+                        type: array
+                        items:
+                          type: object
+                          properties: {}
+                      zaken:zaakeigenschap:
+                        type: array
+                        items:
+                          type: object
+                          properties: {}
+                      zaken:status:
+                        type: array
+                        items:
+                          type: object
+                          properties: {}
+                      zaken:resultaat:
                         type: array
                         items:
                           type: object
@@ -2441,6 +2526,26 @@ paths:
                         items:
                           type: object
                           properties: {}
+                      zaken:zaak:
+                        type: array
+                        items:
+                          type: object
+                          properties: {}
+                      zaken:zaakeigenschap:
+                        type: array
+                        items:
+                          type: object
+                          properties: {}
+                      zaken:status:
+                        type: array
+                        items:
+                          type: object
+                          properties: {}
+                      zaken:resultaat:
+                        type: array
+                        items:
+                          type: object
+                          properties: {}
                       catalogi:catalogus:
                         type: array
                         items:
@@ -2556,6 +2661,26 @@ paths:
                     type: object
                     properties:
                       catalogi:zaaktype:
+                        type: array
+                        items:
+                          type: object
+                          properties: {}
+                      zaken:zaak:
+                        type: array
+                        items:
+                          type: object
+                          properties: {}
+                      zaken:zaakeigenschap:
+                        type: array
+                        items:
+                          type: object
+                          properties: {}
+                      zaken:status:
+                        type: array
+                        items:
+                          type: object
+                          properties: {}
+                      zaken:resultaat:
                         type: array
                         items:
                           type: object
@@ -5950,12 +6075,27 @@ components:
 
             * `zaaktype` - zaaktype
 
+            * `hoofdzaak` - hoofdzaak
+
+            * `deelzaken` - deelzaken
+
+            * `eigenschappen` - eigenschappen
+
+            * `status` - status
+
+            * `resultaat` - resultaat
+
             * `zaaktype.catalogus` - zaaktype.catalogus
 
             * `*` - *'
           type: string
           enum:
           - zaaktype
+          - hoofdzaak
+          - deelzaken
+          - eigenschappen
+          - status
+          - resultaat
           - zaaktype.catalogus
           - '*'
         ordering:
